# projection-head-geometry

./: .gitignore  LICENSE  README.md  experiments.py  head_depth_ablations.py  hessian_tracker.py  plot_results.py  pretrained.ipynb  pyproject.toml
results/cifar10/: collapse_results.npy  experiment_log.txt
results/cifar10/resnet18/: collapse_results.npy  guillotine_results.npy  orbit_visualization.npy
results/cifar10/resnet18/head_depth_ablations/: geometric_ablation_depth_1.npz  geometric_ablation_depth_2.npz  geometric_ablation_depth_3.npz
results/cifar10/resnet18/hessian_tracker/: raw_data_collapsed_relu.npz  raw_data_collapsed_swish.npz  raw_data_normal_swish.npz
results/cifar10/vit_tiny/: collapse_results.npy  curvature_results.npy  experiment_log.txt  guillotine_results.npy  orbit_visualization.npy
results/cifar100/: curvature_results.npy  experiment_log.txt
results/cifar100/resnet18/: collapse_results.npy  guillotine_results.npy
